samples/_failures_safe/1761255876_0b7aa1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c02bbe5.c: In function ‘main’:
./samples/SAFE/__tmp_4c02bbe5.c:139:13: error: expected declaration or statement at end of input
  139 |             print_matrix(rows1, cols1, matrix1);
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_4c02bbe5.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c02bbe5.c:139:13: error: expected declaration or statement at end of input
